Add "--illegal-access=permit" to avoid potential InaccessibleObjectException